# Small-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  chat_history_db.json  chat_manager.py  docker-compose.yml  download_bm25.py  pyproject.toml  requirements.txt  ui_components.py
agent_workspace/: invite_bonus_table.md  test.html  test.md  台风对台州的影响.md  文件总结.md
agent_workspace/.sandbox_audit/: audit_20260715_225026.jsonl  audit_20260715_225110.jsonl  audit_20260715_235254.jsonl  audit_20260715_235521.jsonl  audit_20260715_235532.jsonl
agent_workspace/.traces/: trace_2026-07-15.jsonl
agents/: base_agent.py  coder.py  googledrive.py  researcher.py
alembic/: env.py
alembic/versions/: 2fecd946cc6d_add_role_to_users.py  31f74701df43_add_is_admin_to_users.py  3a8c1d9f4e2b_add_email_to_users.py  5ae8b68410df_add_message_metrics_tokens_duration_.py  f852121c68bb_init_9_tables.py
business/: __init__.py  asset_registry.py  business_layer.py
config/: business_assets.json  config.py  env_config.py
core/: json_utils.py  llm_client.py  llm_engine.py  planner.py  retriever.py  sandbox.py  trace_ui.py  tracing.py
core/tracing/: __init__.py  (+2 more)
deploy/: deploy.sh  nginx.conf  small-agent.service  upload.sh
mcp_servers/: __init__.py  small_agent_server.py  tool_adapter.py
server/: __init__.py  auth.py  chat_service.py  config.py  db.py  deps.py  limiter.py  main.py  schemas.py
tests/: test_json_utils.py  test_planner.py  test_sandbox.py
tools/: tool_drive.py  tool_email.py  tool_file.py  tool_memory.py  tool_search.py  tool_terminal.py
(+39 files in other folders)
