[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "small-agent-server"
version = "0.2.0"
description = "多租户 Agent OS — LLM 引擎 + API 服务"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "mem0ai>=0.0.15",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "duckduckgo-search>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_engine = ["assets/*.json"]
